--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+
+* remove usage of innerHTML
+* improved handling of textinput for IME and mobile
+
 2018.03.26 Version 1.3.3
 * fix regession in static-highlight extension
 * use css animation for cursor blinking
